--- a/DouShouQi/DouShouQi/Resources/Localizable.xcstrings
+++ b/DouShouQi/DouShouQi/Resources/Localizable.xcstrings
@@ -161,6 +161,9 @@
         }
       }
     },
+    "Round %lld" : {
+
+    },
     "statistics" : {
       "extractionState" : "manual",
       "localizations" : {
