new image selector and camera

--- a/DouShouQi/DouShouQi/Resources/Localizable.xcstrings
+++ b/DouShouQi/DouShouQi/Resources/Localizable.xcstrings
@@ -54,7 +54,7 @@
     "Appareil Photo" : {
 
     },
-    "Depuis quelle source souhaitez vous prendre votre photo de profil ?" : {
+    "Depuis quelle source souhaitez-vous prendre votre photo de profil ?" : {
 
     },
     "DouShouQi" : {
