Add game view model

--- a/DouShouQi/DouShouQi/Resources/Localizable.xcstrings
+++ b/DouShouQi/DouShouQi/Resources/Localizable.xcstrings
@@ -146,6 +146,9 @@
         }
       }
     },
+    "Round %lld" : {
+
+    },
     "statistics" : {
       "extractionState" : "manual",
       "localizations" : {
