game over animation

--- a/Sources/DouShouQi/DouShouQi/Resources/Localizable.xcstrings
+++ b/Sources/DouShouQi/DouShouQi/Resources/Localizable.xcstrings
@@ -161,7 +161,15 @@
       }
     },
     "Game Over" : {
-
+      "extractionState" : "stale",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "You loose !"
+          }
+        }
+      }
     },
     "historics" : {
       "extractionState" : "manual",
@@ -231,9 +239,6 @@
         }
       }
     },
-    "Ok" : {
-
-    },
     "options" : {
       "extractionState" : "manual",
       "localizations" : {
@@ -260,9 +265,6 @@
           }
         }
       }
-    },
-    "Partie terminée" : {
-
     },
     "player %lld" : {
       "extractionState" : "manual",
@@ -410,9 +412,29 @@
       }
     },
     "Win" : {
-
+      "extractionState" : "stale",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "You Win !"
+          }
+        },
+        "fr" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Gagné !"
+          }
+        }
+      }
     },
     "Winning reason" : {
+
+    },
+    "You Loosed !" : {
+
+    },
+    "You Won !" : {
 
     }
   },
