--- a/Sources/DouShouQi/DouShouQi/Resources/Localizable.xcstrings
+++ b/Sources/DouShouQi/DouShouQi/Resources/Localizable.xcstrings
@@ -245,12 +245,12 @@
         "en" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "options"
+            "value" : "Options"
           }
         },
         "fr" : {
           "stringUnit" : {
-            "state" : "translated",
+            "state" : "needs_review",
             "value" : "Options"
           }
         }
