--- a/Sources/DouShouQi/DouShouQi/Resources/Localizable.xcstrings
+++ b/Sources/DouShouQi/DouShouQi/Resources/Localizable.xcstrings
@@ -189,12 +189,17 @@
       }
     },
     "Game Over" : {
-      "extractionState" : "stale",
       "localizations" : {
         "en" : {
           "stringUnit" : {
             "state" : "translated",
             "value" : "You loose !"
+          }
+        },
+        "fr" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Perdu !"
           }
         }
       }
@@ -470,12 +475,11 @@
       }
     },
     "Win" : {
-      "extractionState" : "stale",
       "localizations" : {
         "en" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "You Win !"
+            "value" : "You win !"
           }
         },
         "fr" : {
@@ -502,12 +506,6 @@
           }
         }
       }
-    },
-    "You Loosed !" : {
-
-    },
-    "You Won !" : {
-
     }
   },
   "version" : "1.0"
